added ng2-firebase + 3-way-binding

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,9 @@
   <!-- polymer -->
   <link rel="import" href="bower_components/polymer/polymer.html">
   <link rel="import" href="bower_components/paper-input/paper-input.html">
+
+  <!-- angular2 + firebase -->
+  <script src="https://cdn.firebase.com/js/client/2.3.2/firebase.js"></script>
 </head>
 <body>
 
